implement flow for producer-consumer pattern for order-service