@@ -4,8 +4,8 @@ import com.e_commerce.order_service.model.Order;
 import com.e_commerce.order_service.model.OrderItem;
 import events.OrderCreatedEvent;
 
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrderCreatedEventFactory {
 
@@ -13,23 +13,22 @@ public class OrderCreatedEventFactory {
     }
 
     public static OrderCreatedEvent fromOrder(Order order) {
-        List<OrderCreatedEvent.OrderItemEvent> items = order.getOrderItems()
+        List<OrderCreatedEvent.OrderItem> items = order.getOrderItems()
                 .stream()
                 .map(OrderCreatedEventFactory::toEventItem)
-                .collect(Collectors.toList());
+                .toList();
 
-        return OrderCreatedEvent.builder()
-                .orderId(order.getOrderId())
-                .userId(order.getUserId())
-                .orderItems(items)
-                .orderStatus(order.getOrderStatus().name())
-                .build();
+        return new OrderCreatedEvent(
+                order.getOrderId(),
+                items,
+                Instant.now()
+        );
     }
 
-    private static OrderCreatedEvent.OrderItemEvent toEventItem(OrderItem item) {
-        return OrderCreatedEvent.OrderItemEvent.builder()
-                .productId(item.getProductId())
-                .quantity(item.getQuantity())
-                .build();
+    private static OrderCreatedEvent.OrderItem toEventItem(OrderItem item) {
+        return new OrderCreatedEvent.OrderItem(
+                item.getProductId(),
+                item.getQuantity()
+        );
     }
 }
